# ManageCode

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Sources/MinionsCode/: App.swift  AppSettings.swift  ContentView.swift  SessionManager.swift
docs/: config.md  keybindings.md  tmux-and-pty.md
src/: ai.rs  app.rs  config.rs  convert.rs  input.rs  keymap.rs  launcher.rs  main.rs  memory.rs  models.rs  notifications.rs  pty.rs  scanner.rs  tmux.rs  ui.rs  update.rs  watcher.rs
src/ui/: mod.rs  overlays.rs
