[package]
name = "managecode"
version = "1.2.0"
edition = "2021"
description = "Cross-platform TUI dashboard for Claude Code sessions"
license = "MIT"
repository = "https://github.com/Diaugeia/ManageCode"
readme = "README.md"
keywords = ["tui", "claude", "claude-code", "terminal", "dashboard"]
categories = ["command-line-utilities"]

[[bin]]
name = "managecode"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
walkdir = "2"
notify = "6"
portable-pty = "0.9"
vt100 = "0.16"
tui-term = { version = "0.3", features = ["vt100"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
